@@ -150,10 +150,10 @@ function getHostTemplates() {
 
 function getHostsByDescription() {
 	$hosts = array();
-	$tmparray = db_fetch_assoc("select id, description from host order by description");
+	$tmpArray = db_fetch_assoc("select id, description from host order by description");
 
 	if (sizeof($tmpArray)) {
-		foreach ($tmparray as $tmp) {
+		foreach ($tmpArray as $tmp) {
 			$hosts[$tmp["description"]] = $tmp["id"];
 		}
 	}
@@ -187,15 +187,17 @@ function getInputFields($templateId) {
 		INNER JOIN (((data_template_rrd
 		INNER JOIN (graph_templates
 		INNER JOIN graph_templates_item
-		ON graph_templates.id = graph_templates_item.graph_template_id)
-		ON data_template_rrd.id = graph_templates_item.task_item_id)
+		ON graph_templates.id=graph_templates_item.graph_template_id)
+		ON data_template_rrd.id=graph_templates_item.task_item_id)
 		INNER JOIN data_template_data
 		ON data_template_rrd.data_template_id=data_template_data.data_template_id)
 		INNER JOIN data_input_fields
 		ON data_template_data.data_input_id=data_input_fields.data_input_id)
-		ON (data_input_data.data_template_data_id = data_template_data.id)
-		AND (data_input_data.data_input_field_id = data_input_fields.id)
+		ON (data_input_data.data_template_data_id=data_template_data.id)
+		AND (data_input_data.data_input_field_id=data_input_fields.id)
 		WHERE (((graph_templates.id)=$templateId)
+		AND (data_template_rrd.local_data_id=0)
+		AND (data_template_data.local_data_id=0)
 		AND ((data_input_data.t_value)='on')
 		AND ((data_input_fields.input_output)='in'))");
 
