@@ -29,6 +29,7 @@ Cacti CHANGELOG
 -bug: When saving a data query based data templates, their data sources would become corrupt
 -bug: If your system contains INNODB tables, the Technical Support page would hang
 -bug: The default user tree link icon would not be properly highlighted when opening graphs
+-bug: Severe performance problems when adding data query based graphs.
 -feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
 -feature#0001235: CLI script needed to activate a query: add_data_query.php
 -feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
